# judicator

./: .gitignore  ATTRIBUTION.md  README.md  plan-build.md  plan-dataprep.md  pyproject.toml
.github/workflows/: publish.yml
docs/: biases.md  fixture_schemas.md  interpretation.md  judge_types.md  methodology.md
examples/: 01_quickstart.py  02_pointwise_dialogue.py  03_pairwise_qa.py  04_binary_safety.py
scripts/: download_sources.sh  generate_attribution.py  generate_fixtures.py  manipulators.py  verify_fixtures.py
scripts/handcurated/: yesno_probes.json
src/judicator/: __init__.py  _types.py  auditor.py  cost.py  detector.py  exceptions.py  judge.py  parsers.py  report.py
src/judicator/biases/: __init__.py  authority.py  base.py  concreteness.py  position.py  scale_anchoring.py  self_consistency.py  verbosity.py  yes_bias.py
src/judicator/fixtures/: __init__.py  loader.py
src/judicator/fixtures/data/code/: authority.jsonl  position.jsonl  seeds.jsonl  verbosity.jsonl
src/judicator/fixtures/data/dialogue/: authority.jsonl  seeds.jsonl  verbosity.jsonl
src/judicator/fixtures/data/qa/: authority.jsonl  position.jsonl  seeds.jsonl  verbosity.jsonl
src/judicator/fixtures/data/safety/: authority.jsonl  seeds.jsonl  verbosity.jsonl
src/judicator/fixtures/data/summarization/: authority.jsonl  seeds.jsonl  verbosity.jsonl
src/judicator/fixtures/data/universal/: concreteness.jsonl  scale_tiers.jsonl  self_consistency.jsonl  yesno_probes.jsonl
tests/: conftest.py  test_auditor.py  test_biases.py  test_cost.py  test_detector.py  test_fixtures.py  test_parallel.py  test_parsers.py  test_reports.py
