[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "judicator"
version = "0.1.0"
description = "Audit your LLM-as-a-Judge for bias and miscalibration."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = ["numpy"]
keywords = ["llm", "judge", "bias", "audit", "evaluation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/ankurpandey42/judicator"
Repository = "https://github.com/ankurpandey42/judicator"
Issues = "https://github.com/ankurpandey42/judicator/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/judicator"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
